export { default } from '@/app/flujos/delegados/delegados-home/mis-jugadores/pantalla-mis-jugadores'
