...
        <Tabs.Screen
          name="buscar"
          options={{
            title: 'Buscar',
            headerTitle: () => <Texto variante="titulo">Buscar</Texto>,
            tabBarIcon: ({ color }) => <Feather name="search" size={22} color={color} />,
            tabBarButtonTestID: 'tab-buscar',
          }}
        />
        <Tabs.Screen
          name="pendientes"
          options={{
            headerTitle: () => (
              <HeaderTituloConCodigo titulo={equipoSeleccionadoNombre || 'Pendientes'} />
            ),
            tabBarLabel: 'Pendientes',
            tabBarIcon: ({ color }) => <Feather name="clock" size={22} color={color} />,
            tabBarButtonTestID: 'tab-pendientes',
          }}
        />
      </Tabs>
    </MenuProvider>
  )
}
...
