export { default } from '@/app/flujos/delegados/delegados-home/pendientes/pantalla-pendientes'
