...
          equipos, no se eliminará de ellos.
        </Text>
      </ModalOscuroCuerpo>

      <ModalOscuroAcciones>
        <Boton
          testID="boton-quitar-del-equipo"
          texto="Quitar del equipo"
          icono="trash-2"
          color="rojo"
          onPress={handleDesvincular}
          cargando={cargando}
          deshabilitado={cargando}
...
